Error handling added. Error messages at console as well as view added. Improved view.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -38,6 +38,7 @@
 					<input type = "submit" name = "submit" value = "Get Weather">
 				</p>
 			</form>
+			<p align = "center"><b><font color="red"><%= errMsg %></font></b></p>
 			<p align ="right"> <img border = "0" src="WuLogo.jpg" alt="Wunderground" width="300" height="106"> </p>
 		</div>
 		<script src = "jquery/dist/jquery.js"></script>
