--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,6 +3,7 @@
 <head>
 	<meta charset = "UTF-8" >
 	<title>Weather Data </title>
+	<!-- For styling -->
 	<link rel = "stylesheet" href = "bootstrap/dist/css/bootstrap.css">
 </head>
 	<body>
@@ -39,8 +40,10 @@
 				</p>
 			</form>
 			<p align = "center"><b><font color="red"><%= errMsg %></font></b></p>
+			<!-- Wunderground Logo -->
 			<p align ="right"> <img border = "0" src="WuLogo.jpg" alt="Wunderground" width="300" height="106"> </p>
 		</div>
+		<!-- For interoperability accross all browsers -->
 		<script src = "jquery/dist/jquery.js"></script>
 		<script src = "bootstrap/dist/js/bootstrap.js"></script>
 	</body>
