--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
 	<meta charset = "UTF-8" >
 	<title>Weather Data </title>
 	<!-- For styling -->
-	<link rel = "stylesheet" href = "bootstrap/dist/css/bootstrap.css">
+	<link rel = "stylesheet" href = "style.css">
 </head>
 	<body>
 		<div class = "container">
